# gsd

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.build-service/: config.toml
scripts/: bump-version.mjs  release.mjs
src/: main.rs
src/config/: mod.rs
src/git/: mod.rs
src/logging/: mod.rs
src/snapshot/: mod.rs
tests/: preview_smoke.rs
