[package]
name = "gsd"
version = "0.0.1"
edition = "2021"
description = "Git snapshot daemon - automatic versioning of monitored directories"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
ignore = "0.4"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
